--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#82D9FB"
+    android:background="#2196F3"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:layout_height="match_parent"
