--- a/app/src/main/res/layout/fragment_my_ads.xml
+++ b/app/src/main/res/layout/fragment_my_ads.xml
@@ -41,9 +41,8 @@
         android:id="@+id/fab_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:src="@drawable/icon_upload"
-        android:backgroundTint="#effffe"
+        android:backgroundTint="#ffffff"
 
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
