--- a/app/src/main/res/layout/fragment_user_chat.xml
+++ b/app/src/main/res/layout/fragment_user_chat.xml
@@ -41,10 +41,11 @@
         android:id="@+id/msgList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_blue1"
         android:layout_above="@id/sendFab"
         android:layout_below="@id/toolbar"
-        />
+        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="40dp"
+        android:background="@color/light_blue1" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
