--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -26,6 +26,8 @@
             android:text="Sender Name"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:textColor="@color/black"
+
 
             android:layout_marginStart="15dp"
             />
@@ -37,6 +39,8 @@
 
             android:text="Book Ad Title"
             android:textSize="15dp"
+            android:textColor="@color/black"
+
 
             android:layout_below="@id/sender_name"
             android:layout_marginTop="15dp"
@@ -51,6 +55,7 @@
 
             android:text="Price"
             android:textSize="25dp"
+            android:textColor="@color/black"
 
             android:layout_alignParentEnd="true"
             android:layout_alignBottom="@id/book_ad_title"
