--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -31,7 +31,7 @@
 
             android:layout_marginBottom="20dp"
             android:text="username"
-            android:textColor="@color/purple_500"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
 
             android:text="Time"
+            android:textColor="@color/black"
 
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
