--- a/app/src/main/res/layout/my_ads_card.xml
+++ b/app/src/main/res/layout/my_ads_card.xml
@@ -34,6 +34,8 @@
 
             android:text="Book Ad Title"
             android:textSize="25dp"
+            android:textColor="@color/black"
+
 
             android:layout_marginStart="15dp"
             android:layout_toRightOf="@id/book_ad_thumbnail"
@@ -47,6 +49,8 @@
 
             android:text="Price"
             android:textSize="20dp"
+            android:textColor="@color/black"
+
 
             android:layout_alignParentEnd="true"
             android:layout_below="@id/book_ad_title"
