--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -21,20 +21,6 @@
         >
 
         <TextView
-            android:id="@+id/tvUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-
-            android:layout_marginBottom="20dp"
-            android:text="username"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <TextView
             android:id="@+id/tvMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +29,7 @@
             android:textSize="20sp"
             android:textColor="@color/black"
 
-            android:layout_below="@id/tvUsername"
+            android:layout_below="@id/tvTime"
             android:layout_marginLeft="10dp"
 
             />
@@ -58,7 +44,7 @@
 
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
 
             />
 
